[package]
name = "react_tutorial"
version = "0.1.0"
authors = ["White-Green <43771790+White-Green@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys="0.3.39"
yew = "0.15"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version="0.3.39"
features=["HtmlAnchorElement","Exception","CssStyleDeclaration"]